test-a6/dates-actual-01.txt
  File "dates.py", line 27
    print(“ERROR: Could not open file “ + filename)
               ^
SyntaxError: invalid character in identifier
